Cloudformation_module/Task_2/Task2.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: >-  
  >- Develop a CloudFormation template called "security_groups" that includes the following AWS networking components:
  >- - "Admin" (allowing all incoming connections from your IP address and the IP address of Karaganda EPAM office);
  >- - "ELB" (allowing incoming HTTP connections from anywhere);
  >- - "EC2" (allowing incoming HTTP connections from members of "ELB" security group);
  >- - "RDS" (allowing incoming MySQL connections from members of "EC2" security group).
  >-
  >- The template must have the following input parameter:
  >- VPC ID.
  >-
  >- The template must have the following outputs:
  >- - "Admin" security group ID;
  >- - "ELB" security group ID;
  >- - "EC2" security group ID;
  >- - "RDS" security group ID.
  

Parameters:
  MyVpcId:
    Description: VPC id 
    Type: String



Resources:
  
  MyAdminSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "CFT_Admin" 
      GroupDescription: "Karaganda EPAM office"
      VpcId: !Ref MyVpcId
  
  MyAdminSgIngress1:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      CidrIp: 91.185.25.194/32
      Description: "Epam Office Ip Range"
      FromPort: 0
      GroupId: !Ref MyAdminSg
      IpProtocol: -1
      ToPort: 65535
      
      
      
  MyAdminSgIngress2:
    Type: AWS::EC2::SecurityGroupIngress
    Properties: 
      CidrIp: 82.200.249.238/30
      Description: "Home Ip Range"
      FromPort: 0
      GroupId: !Ref MyAdminSg
      IpProtocol: -1
      ToPort: 65535
  
  MyEc2SgIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Http from ELB"
      FromPort: 80
      GroupId: !Ref MyEc2Sg
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref MyElbSg
      ToPort: 80



  MyRdsSgIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "MySql connections from EC2"
      FromPort: 3306
      GroupId: !Ref MyRdsSg
      IpProtocol: tcp
      SourceSecurityGroupId: !Ref MyEc2Sg
      ToPort: 3306    

  MyElbSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "CFT_ELB"
      GroupDescription: "allowing incoming HTTP connections from anywhere"
      VpcId: !Ref MyVpcId
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: "HTTP From everywhere"
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
  
  
  
  MyEc2Sg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "CFT_EC2"
      GroupDescription: "allowing incoming HTTP connections from members of ELB security group"
      VpcId: !Ref MyVpcId
  
  MyRdsSg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "CFT_RDS"
      GroupDescription: "MySQL connections from members of EC2 security group"
      VpcId: !Ref MyVpcId
  
  
Outputs:
  MyAdminSgOutput:
    Description: MyAdminSg
    Value: !Ref MyAdminSg
  MyElbSgOutput:
    Description: MyElbSg
    Value: !Ref MyElbSg
  MyEc2SgOutput:
    Description: MyEc2Sg
    Value: !Ref MyEc2Sg
  MyRdsSgOutput:
    Description: MyRdsSg
    Value: !Ref MyRdsSg
